[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/chararter_menu/inventory_menu.gd" type="Script" id=1]
[ext_resource path="res://menus/chararter_menu/item_active_button.gd" type="Script" id=2]
[ext_resource path="res://menus/chararter_menu/inventory_item_button.gd" type="Script" id=3]
[ext_resource path="res://menus/chararter_menu/character menu_v3.gd" type="Script" id=4]
[ext_resource path="res://menus/chararter_menu/stat_levelup_widget.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/chararter_menu/ability_increase_widget.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/generic portrait.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.321569, 0.294118, 0.294118, 1 )

[node name="character_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -566.0
margin_top = -290.5
margin_right = 566.0
margin_bottom = 290.5
script = ExtResource( 4 )

[node name="back_panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="portrait" type="TextureRect" parent="."]
anchor_left = 0.0185512
anchor_top = 0.0275387
anchor_right = 0.0185512
anchor_bottom = 0.0275387
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="character_name" type="Label" parent="."]
margin_left = 150.0
margin_top = 62.0
margin_right = 190.0
margin_bottom = 76.0
text = "name"

[node name="xp_points" type="RichTextLabel" parent="."]
margin_left = 31.0
margin_top = 152.0
margin_right = 192.0
margin_bottom = 184.0
text = "experience points: 5"

[node name="stats" type="VBoxContainer" parent="."]
margin_left = 55.0
margin_top = 249.0
margin_right = 217.0
margin_bottom = 397.0
custom_constants/separation = 13

[node name="max_hp" type="Label" parent="stats"]
margin_right = 162.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "max hp"

[node name="hp" type="Label" parent="stats"]
margin_top = 27.0
margin_right = 162.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "hp"

[node name="attack" type="Label" parent="stats"]
margin_top = 54.0
margin_right = 162.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "attack"

[node name="ap" type="Label" parent="stats"]
visible = false
margin_top = 81.0
margin_right = 162.0
margin_bottom = 95.0
size_flags_horizontal = 3
text = "ap"

[node name="movement" type="Label" parent="stats"]
margin_top = 81.0
margin_right = 162.0
margin_bottom = 95.0
text = "movement"

[node name="increase_stats" type="VBoxContainer" parent="."]
margin_left = 47.0
margin_top = 381.0
margin_right = 174.0
margin_bottom = 539.0
custom_constants/separation = 20

[node name="stat menu" parent="increase_stats" instance=ExtResource( 5 )]
margin_right = 127.0
margin_bottom = 20.0
hint_tooltip = "increase attack damage"

[node name="stat menu2" parent="increase_stats" instance=ExtResource( 5 )]
margin_top = 40.0
margin_right = 127.0
margin_bottom = 60.0
stat = 4

[node name="stat menu3" parent="increase_stats" instance=ExtResource( 5 )]
margin_top = 80.0
margin_right = 127.0
margin_bottom = 100.0
stat = 2

[node name="abilities" type="VBoxContainer" parent="."]
margin_left = 226.0
margin_top = 153.0
margin_right = 565.0
margin_bottom = 373.0
custom_constants/separation = 20

[node name="ability increase widget" parent="abilities" instance=ExtResource( 6 )]
margin_right = 346.0
margin_bottom = 20.0

[node name="change builds" type="Panel" parent="."]
visible = false
margin_left = 861.0
margin_top = 403.0
margin_right = 1111.0
margin_bottom = 576.0

[node name="build buttons" type="Label" parent="change builds"]
margin_left = 72.0
margin_top = 22.0
margin_right = 159.0
margin_bottom = 39.0
text = "build buttons"

[node name="HBoxContainer" type="HBoxContainer" parent="change builds"]
margin_left = 13.0
margin_top = 48.0
margin_right = 234.0
margin_bottom = 94.0

[node name="Button" type="Button" parent="change builds/HBoxContainer"]
margin_right = 40.0
margin_bottom = 46.0
rect_min_size = Vector2( 40, 40 )
text = "1"

[node name="Button2" type="Button" parent="change builds/HBoxContainer"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 46.0
rect_min_size = Vector2( 40, 40 )
text = "2"

[node name="Button3" type="Button" parent="change builds/HBoxContainer"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 46.0
rect_min_size = Vector2( 40, 40 )
text = "3"

[node name="Button4" type="Button" parent="change builds/HBoxContainer"]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 46.0
rect_min_size = Vector2( 40, 40 )
text = "4"

[node name="Button5" type="Button" parent="change builds/HBoxContainer"]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 46.0
rect_min_size = Vector2( 40, 40 )
text = "5"

[node name="copy" type="Button" parent="change builds"]
margin_left = 50.0
margin_top = 114.0
margin_right = 107.0
margin_bottom = 140.0
text = "copy"

[node name="Button" type="Button" parent="change builds"]
margin_left = 123.0
margin_top = 113.0
margin_right = 179.0
margin_bottom = 141.0
text = "paste"

[node name="item_container_header" type="Label" parent="."]
margin_left = 800.0
margin_top = 136.5
margin_right = 900.0
margin_bottom = 150.5
text = "inventory"

[node name="items_container" type="GridContainer" parent="."]
margin_left = 741.0
margin_top = 161.0
margin_right = 947.0
margin_bottom = 271.0
columns = 2

[node name="inventory_item_button1" type="Button" parent="items_container"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "item button 1"
script = ExtResource( 3 )

[node name="inventory_item_button2" type="Button" parent="items_container"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "item button 2"
script = ExtResource( 3 )

[node name="item_active_1" type="Button" parent="items_container"]
visible = false
margin_top = 44.0
margin_right = 100.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 0 )
text = "item active 1"
script = ExtResource( 2 )

[node name="item_active_2" type="Button" parent="items_container"]
visible = false
margin_top = 44.0
margin_right = 100.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 0 )
text = "item active 1"
script = ExtResource( 2 )

[node name="inventory_menu" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.5
margin_top = -197.5
margin_right = 375.5
margin_bottom = 197.5
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="grid" type="GridContainer" parent="inventory_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -359.5
margin_top = -371.0
margin_right = 364.5
margin_bottom = -120.0
columns = 7

[node name="pick item" type="Label" parent="inventory_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_top = 10.0
margin_right = 29.5
margin_bottom = 24.0
text = "pick item"

[node name="close_button" type="Button" parent="inventory_menu"]
margin_left = 347.0
margin_top = 341.0
margin_right = 412.0
margin_bottom = 367.0
text = "close"

[node name="unequip_button" type="Button" parent="inventory_menu"]
margin_left = 335.0
margin_top = 290.0
margin_right = 428.0
margin_bottom = 329.0
text = "unequip"

[connection signal="pressed" from="items_container/item_active_1" to="items_container/item_active_1" method="_on_item_active_pressed"]
[connection signal="pressed" from="items_container/item_active_2" to="items_container/item_active_2" method="_on_item_active_pressed"]
